--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="description" content="Erleben Sie spannende Spiele und exklusive Aktionen bei Faber – Ihrem Online-Casino für erstklassige Unterhaltung und beste Gewinnchancen.">
         <meta name="keywords" content="Faber, Online Casino, Spielautomaten, exklusive Boni, Glücksspiel">
-        <link rel="canonical" href="https://www.faber.de/">
-        <title>Faber | Ihr Online-Casino mit exklusiven Boni und spannenden Spielen</title>
+        <link rel="canonical" href="http://faber-lotto-service.de/">
+        <title>Faber-Lotto-Service | Ihr Online-Casino mit exklusiven Boni und spannenden Spielen</title>
         <link rel="shortcut icon" href="images/fav-icon.png" type="image/x-icon">
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="css/responsive.css">
@@ -62,7 +62,7 @@
                     <div>
                         <img src="images/card-01.png" alt="50% Willkommensbonus" class="card-image">
                         <div class="overlay">
-                            <a href="https://www.faber.de/lotto/quicktipp/">
+                            <a href="registration.html">
                                 <button class="btn">Quicktipp</button>
                             </a>
                         </div>
@@ -72,7 +72,7 @@
                     <div>
                         <img src="images/card-02.png" alt="20 Freispiele Bonus" class="card-image">
                         <div class="overlay overlay-02">
-                            <a href="https://www.faber.de/lotto/quicktipp/">
+                            <a href="registration.html">
                                 <button class="btn">Eurojackpot</button>
                             </a>
                         </div>
@@ -82,7 +82,7 @@
                     <div>
                         <img src="images/card-03.png" alt="Einzahlungsbonus" class="card-image">
                         <div class="overlay overlay-02">
-                            <a href="https://www.faber.de/eurojackpot/quicktipp/">
+                            <a href="registration.html">
                                 <button class="btn">Quicktipp</button>
                             </a>
                         </div>
@@ -92,7 +92,7 @@
                     <div>
                         <img src="images/card-0004.png" alt="Tägliche Freispiele" class="card-image">
                         <div class="overlay overlay-03">
-                            <a href="https://www.faber.de/spielgemeinschaften/super-lotto-60/">
+                            <a href="registration.html">
                                 <button class="btn">Spielgemeinschaften</button>
                             </a>
                         </div>
@@ -157,7 +157,7 @@
                         <ion-icon name="call-outline"></ion-icon>
                     </div>
                     <div class="cutomer-address-text">
-                        <a href="tel:+02349383333">0234 9383 333</a>
+                        <a href="tel:+491805811118">+49 1805811118</a>
                     </div>
                 </div>
 
@@ -166,7 +166,7 @@
                         <ion-icon name="mail-outline"></ion-icon>
                     </div>
                     <div class="cutomer-address-text">
-                        <a href="mailto:contact@faber.de.com">contact@faber.de.com</a>
+                        <a href="mailto:contact@faber-lotto-service.de">contact@faber-lotto-service.de</a>
                     </div>
                 </div>
             </div>
@@ -219,7 +219,7 @@
         
         <div class="container text-center">
             <p class="spielbankfooter-area-copyright">
-                ©2025 All rights reserved by Faber.de.com 
+                ©2025 All rights reserved by Faber-Lotto-Service.de 
             </p>
         </div>
     </div>
