--- a/terms.html
+++ b/terms.html
@@ -6,8 +6,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="description" content="Erleben Sie spannende Spiele und exklusive Aktionen bei Faber – Ihrem Online-Casino für erstklassige Unterhaltung und beste Gewinnchancen.">
         <meta name="keywords" content="Faber, Online Casino, Spielautomaten, exklusive Boni, Glücksspiel">
-        <link rel="canonical" href="https://www.faber.de/">
-        <title>Faber | Ihr Online-Casino mit exklusiven Boni und spannenden Spielen</title>
+        <link rel="canonical" href="http://faber-lotto-service.de/">
+        <title>Faber-Lotto-Service  | Ihr Online-Casino mit exklusiven Boni und spannenden Spielen</title>
         <link rel="shortcut icon" href="images/fav-icon.png" type="image/x-icon">
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="css/responsive.css">
@@ -87,7 +87,7 @@
                 <p>Für Fragen zu diesen Allgemeinen Geschäftsbedingungen kontaktieren Sie uns bitte unter:</p>
                 <ul>
                     <li><strong>E-Mail:</strong> kontakt@faber.de</li>
-                    <li><strong>Website:</strong> <a href="https://faber.de" target="_blank">https://faber.de</a></li>
+                    <li><strong>Website:</strong> <a href="http://faber-lotto-service.de/" target="_blank">http://faber-lotto-service.de/</a></li>
                 </ul>
                 <p>Wir bemühen uns, Ihre Anfragen zeitnah zu beantworten.</p>
             </div>
@@ -118,7 +118,7 @@
                         <ion-icon name="call-outline"></ion-icon>
                     </div>
                     <div class="cutomer-address-text">
-                        <a href="tel:+02349383333">0234 9383 333</a>
+                        <a href="tel:+491805811118">+49 1805811118</a>
                     </div>
                 </div>
 
@@ -127,7 +127,7 @@
                         <ion-icon name="mail-outline"></ion-icon>
                     </div>
                     <div class="cutomer-address-text">
-                        <a href="mailto:contact@faber.de.com">contact@faber.de.com</a>
+                        <a href="mailto:contact@faber-lotto-service.de">contact@faber-lotto-service.de</a>
                     </div>
                 </div>
             </div>
@@ -180,7 +180,7 @@
         
         <div class="container text-center">
             <p class="spielbankfooter-area-copyright">
-                ©2025 All rights reserved by Faber.de.com 
+                ©2025 All rights reserved by Faber-Lotto-Service.de 
             </p>
         </div>
     </div>
