--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="description" content="Erleben Sie spannende Spiele und exklusive Aktionen bei Faber – Ihrem Online-Casino für erstklassige Unterhaltung und beste Gewinnchancen.">
-        <meta name="keywords" content="Faber, Online Casino, Spielautomaten, exklusive Boni, Glücksspiel">
-        <link rel="canonical" href="http://faber-lotto-service.de/">
+        <meta name="description" content="Erleben Sie spannende Spiele und exklusive Aktionen bei Faber-Lotto-Service – Ihrem Online-Casino für erstklassige Unterhaltung und beste Gewinnchancen.">
+        <meta name="keywords" content="Faber-Lotto-Service, Online Casino, Spielautomaten, exklusive Boni, Glücksspiel">
+        <link rel="canonical" href="http://Faber-Lotto-Service.de/">
         <title>Faber-Lotto-Service | Ihr Online-Casino mit exklusiven Boni und spannenden Spielen</title>
         <link rel="shortcut icon" href="images/fav-icon.png" type="image/x-icon">
         <link rel="stylesheet" href="css/style.css">
@@ -49,7 +49,7 @@
         <div class="container">
             <div class="ContentArea">
                 <div class="faberklajsjdjjl-text">
-                    <h1>Exklusive Aktionen bei Faber</h1>
+                    <h1>Exklusive Aktionen bei Faber-Lotto-Service</h1>
                 <p>Nutzen Sie Ihre Chance auf echte Gewinne und erleben Sie erstklassige Unterhaltung mit spannenden Sportwetten und attraktiven Angeboten.</p>
                 </div>
             </div>
@@ -106,19 +106,19 @@
             <div class="row">
                 <div class="col introduction mx-sm-4 mt-md-4 seo">
                     <h1>
-                        Lotto online spielen auf faber.de – Ihre digitale Lotto-Annahmestelle
+                        Lotto online spielen auf Faber-Lotto-Service.de – Ihre digitale Lotto-Annahmestelle
                     </h1>
                     <p>
-                        Spielen Sie Lotto bequem und sicher online! Bei faber.de können Sie am klassischen Lotto 6aus49 sowie an den Zusatzlotterien Super6, Spiel77 und der europaweiten Lotterie Eurojackpot teilnehmen. Wählen Sie Ihre Zahlen entweder über den Lotto-Normalschein oder ein Systemspiel (Voll- oder Teilsystem). Beim Eurojackpot tippen Sie fünf Gewinnzahlen plus zwei Eurozahlen. Alternativ nutzen Sie unseren Quicktipp – ein zufällig generierter Tipp aus unserem Superpool. Profitieren Sie von unserer langjährigen Erfahrung und steigern Sie Ihre Gewinnchancen.
+                        Spielen Sie Lotto bequem und sicher online! Bei Faber-Lotto-Service.de können Sie am klassischen Lotto 6aus49 sowie an den Zusatzlotterien Super6, Spiel77 und der europaweiten Lotterie Eurojackpot teilnehmen. Wählen Sie Ihre Zahlen entweder über den Lotto-Normalschein oder ein Systemspiel (Voll- oder Teilsystem). Beim Eurojackpot tippen Sie fünf Gewinnzahlen plus zwei Eurozahlen. Alternativ nutzen Sie unseren Quicktipp – ein zufällig generierter Tipp aus unserem Superpool. Profitieren Sie von unserer langjährigen Erfahrung und steigern Sie Ihre Gewinnchancen.
                     </p>
                     <h2>
                         45 Jahre Erfahrung – Einfach, sicher und bequem Lotto online spielen
                     </h2>
                     <p>
-                        Faber.de ist Ihre staatlich lizenzierte Lotto-Annahmestelle im Internet. Nehmen Sie sicher und komfortabel an den staatlichen Lotterien des Deutschen Lotto- und Totoblocks teil – ohne den Weg zur örtlichen Annahmestelle. Ihre Spielscheine füllen Sie einfach online aus.
+                        Faber-Lotto-Service.de ist Ihre staatlich lizenzierte Lotto-Annahmestelle im Internet. Nehmen Sie sicher und komfortabel an den staatlichen Lotterien des Deutschen Lotto- und Totoblocks teil – ohne den Weg zur örtlichen Annahmestelle. Ihre Spielscheine füllen Sie einfach online aus.
                     </p>
                     <dl>
-                        <dt>Ihre Vorteile mit faber.de:</dt>
+                        <dt>Ihre Vorteile mit Faber-Lotto-Service.de:</dt>
                         <dd>✔ Kein Anfahrtsweg – Lotto spielen von überall aus, rund um die Uhr</dd>
                         <dd>✔ 20 % Online-Rabatt auf die üblichen Scheingebühren</dd>
                         <dd>✔ Automatische Gewinnbenachrichtigung – kein verpasster Gewinn</dd>
@@ -128,7 +128,7 @@
                         <dd>✔ Seit 45 Jahren vertrauenswürdig – viele Gewinner, einige sogar Millionäre!</dd>
                     </dl>
                     <br>
-                    <b>Faber.de – Ihr Partner für smartes Lotto-Spiel!</b>
+                    <b>Faber-Lotto-Service.de – Ihr Partner für smartes Lotto-Spiel!</b>
                 </div>
             </div>
             <hr>
@@ -137,7 +137,7 @@
             <p class="spielbankfooter-area-p-a">
                 <strong>Bitte beachten Sie:</strong> <br>
                 Die Teilnahme am Glücksspiel ist erst ab 18 Jahren erlaubt. Glücksspiel kann süchtig machen – Hilfe finden Sie <a href="#">hier</a>.  
-                Die Faber Lotto GmbH & Co. KG besitzt eine offizielle Lotterievermittlungserlaubnis der Gemeinsamen Glücksspielbehörde der Länder (GGL).  
+                Die Faber-Lotto-Service Lotto GmbH & Co. KG besitzt eine offizielle Lotterievermittlungserlaubnis der Gemeinsamen Glücksspielbehörde der Länder (GGL).  
                 Gewinnwahrscheinlichkeit: 1 : 140 Mio. beim Lotto 6aus49, 1 : 10 Mio. beim Spiel77, 1 : 140 Mio. beim EuroJackpot.
             </p>
             <hr>
@@ -148,7 +148,8 @@
                         <ion-icon name="timer-outline"></ion-icon>
                     </div>
                     <div class="cutomer-address-text">
-                        <p>Mo.-Fr. von 9 - 18 Uhr, <br> Sa. 10 - 14 Uhr</p>
+                        <p>Markstraße 79 <br>
+                            44801 Bochum</p>
                     </div>
                 </div>
                 
@@ -166,7 +167,7 @@
                         <ion-icon name="mail-outline"></ion-icon>
                     </div>
                     <div class="cutomer-address-text">
-                        <a href="mailto:contact@faber-lotto-service.de">contact@faber-lotto-service.de</a>
+                        <a href="mailto:contact@Faber-Lotto-Service.de">contact@Faber-Lotto-Service.de</a>
                     </div>
                 </div>
             </div>
