--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -119,10 +119,11 @@
             <div class="customer-support-footer pb-5">
                 <div class="customer-info">
                     <div class="cutomer-icon">
-                        <ion-icon name="timer-outline"></ion-icon>
+                        <ion-icon name="map-outline"></ion-icon>
                     </div>
                     <div class="cutomer-address-text">
-                        <p>Mo.-Fr. von 9 - 18 Uhr, <br> Sa. 10 - 14 Uhr</p>
+                        <p>Markstraße 79 <br>
+                            44801 Bochum</p>
                     </div>
                 </div>
                 
