--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             <div class="customer-support-footer pb-5">
                 <div class="customer-info">
                     <div class="cutomer-icon">
-                        <ion-icon name="timer-outline"></ion-icon>
+                        <ion-icon name="map-outline"></ion-icon>
                     </div>
                     <div class="cutomer-address-text">
                         <p>Markstraße 79 <br>
